# torch-opencl

./: .gitignore  .megaignore  CMakeLists.txt  README.id.md  pyproject.toml
src/: main.cpp
src/torch_opencl/: __init__.py
tests/: test_main.py
