[project]
name = "torch-opencl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "izzalDev", email = "rizal.fadlullah@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "numpy<2.4",
    "torch>=2.11",
]

[tool.scikit-build]
minimum-version = "build-system.requires"
build-dir = "build"

[tool.uv]
cache-keys = [{ file = "pyproject.toml" }, { file = "src/**/*.{h,c,hpp,cpp}" }, { file = "CMakeLists.txt" }]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", marker = "sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[build-system]
requires = ["scikit-build-core>=0.12", "nanobind>=2.12.0", "torch>=2.11"]
build-backend = "scikit_build_core.build"

[dependency-groups]
dev = [
    "nanobind>=2.12.0",
    "pytest>=9.0",
    "scikit-build-core>=0.12",
]
